--- a/index.html
+++ b/index.html
@@ -1,345 +1,282 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🚬 VAPE PORTAL 9000</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🚬 VAPE PORTAL 9000</title>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Zilla+Slab:wght@400;500&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Zilla Slab', serif;
+            background: linear-gradient(to right, #8E2DE2, #4A00E0);
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
 
-    body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: radial-gradient(circle at center, #1a1a2e, #0f0c29);
-      color: #fff;
-      overflow-x: hidden;
-    }
+        h1 {
+            font-size: 2.5em;
+            text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
+        }
 
-    .hidden { display: none; }
+        .content {
+            padding: 20px;
+            flex-grow: 1;
+        }
 
-    .welcome, .app, .detail-screen, .cart-screen {
-      padding: 20px;
-      text-align: center;
-      display: none;
-    }
+        .button {
+            background-color: #fff;
+            color: #4A00E0;
+            border: 2px solid #4A00E0;
+            border-radius: 30px;
+            padding: 15px 30px;
+            margin: 10px;
+            font-size: 1.2em;
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
 
-    .welcome {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(135deg, #20002c, #cbb4d4);
-      animation: fadeIn 2s ease-out;
-    }
+        .button:hover {
+            background-color: #4A00E0;
+            color: #fff;
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);
+            transform: scale(1.1);
+        }
 
-    .start-btn {
-      padding: 15px 30px;
-      margin-top: 30px;
-      font-size: 1.2em;
-      color: #fff;
-      background: transparent;
-      border: 2px solid #00f0ff;
-      border-radius: 8px;
-      position: relative;
-      overflow: hidden;
-    }
+        .button:active {
+            transform: scale(0.9);
+        }
 
-    .start-btn::before {
-      content: '';
-      position: absolute;
-      width: 200%;
-      height: 100%;
-      background: linear-gradient(120deg, #00f0ff, #8a2be2, #00f0ff);
-      animation: electric 2s linear infinite;
-      top: 0;
-      left: -100%;
-      z-index: 0;
-      opacity: 0.5;
-    }
+        .vape-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
+        }
 
-    .start-btn span {
-      position: relative;
-      z-index: 1;
-    }
+        .vape-item {
+            background-color: #fff;
+            color: #4A00E0;
+            border: 2px solid #4A00E0;
+            border-radius: 10px;
+            padding: 15px;
+            margin: 10px;
+            width: 180px;
+            text-align: center;
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
 
-    @keyframes electric {
-      0% { left: -100%; }
-      100% { left: 100%; }
-    }
+        .vape-item:hover {
+            background-color: #4A00E0;
+            color: #fff;
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);
+            transform: scale(1.05);
+        }
 
-    .filters {
-      position: sticky;
-      top: 0;
-      background: #111;
-      z-index: 100;
-      padding: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      border-bottom: 2px solid #444;
-    }
+        .vape-item:active {
+            transform: scale(0.95);
+        }
 
-    .filters select {
-      padding: 10px;
-      font-size: 1em;
-      border-radius: 6px;
-      background: #222;
-      color: #fff;
-      margin: 5px;
-    }
+        .sticky-header {
+            position: sticky;
+            top: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            color: #fff;
+        }
 
-    .vape-list {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-      margin-top: 20px;
-    }
+        .footer {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 20px;
+        }
 
-    .vape {
-      background: #1f1f3b;
-      border-radius: 12px;
-      padding: 15px;
-      box-shadow: 0 0 10px rgba(0, 240, 255, 0.2);
-    }
+        .cart-button {
+            background-color: #fff;
+            color: #4A00E0;
+            border: 2px solid #4A00E0;
+            border-radius: 30px;
+            padding: 15px 30px;
+            margin: 10px;
+            font-size: 1.2em;
+            cursor: pointer;
+        }
 
-    .vape img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
+        .cart-button:hover {
+            background-color: #4A00E0;
+            color: #fff;
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);
+            transform: scale(1.1);
+        }
 
-    .button-group {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-    }
+        .cart-button:active {
+            transform: scale(0.9);
+        }
 
-    button {
-      padding: 10px 20px;
-      font-size: 1em;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      background: #222;
-      color: #fff;
-      border: 2px solid #00f0ff;
-      position: relative;
-      overflow: hidden;
-    }
-
-    button::before {
-      content: '';
-      position: absolute;
-      width: 200%;
-      height: 100%;
-      background: linear-gradient(120deg, #00f0ff, #8a2be2, #00f0ff);
-      animation: electric 3s linear infinite;
-      top: 0;
-      left: -100%;
-      z-index: 0;
-      opacity: 0.3;
-    }
-
-    button span {
-      position: relative;
-      z-index: 1;
-    }
-
-    .detail-screen img {
-      width: 100%;
-      max-width: 300px;
-      margin: 20px auto;
-    }
-
-    .flavour-options {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .flavour-options button {
-      background: #333;
-    }
-
-    .cart-item {
-      background: #1f1f3b;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 8px;
-    }
-
-  </style>
+        .back-button {
+            background-color: transparent;
+            border: none;
+            color: #fff;
+            font-size: 1.2em;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
-  <!-- Welcome Screen -->
-  <div class="welcome" id="welcome">
-    <h1>🚬 VAPE PORTAL 9000<br>Погрузись в будущее вкуса</h1>
-    <button class="start-btn" onclick="startApp()"><span>🚀 Начать</span></button>
-  </div>
-
-  <!-- App Screen -->
-  <div class="app" id="app">
-    <div class="filters">
-      <select id="nicotine" onchange="filterVapes()">
-        <option value="">Никотин</option>
-        <option value="2%">2%</option>
-        <option value="2.5%">2.5%</option>
-        <option value="5%">5%</option>
-        <option value="6%">6%</option>
-      </select>
-      <select id="puffs" onchange="filterVapes()">
-        <option value="">Затяжки</option>
-        <option value="under15">до 15k</option>
-        <option value="15to30">15k–30k</option>
-        <option value="30plus">30k+</option>
-      </select>
-      <select id="price" onchange="filterVapes()">
-        <option value="">Цена</option>
-        <option value="10">до €10</option>
-        <option value="30">€10–30</option>
-        <option value="30plus">€30+</option>
-      </select>
+    <!-- Welcome Screen -->
+    <div class="content" id="welcomeScreen">
+        <h1>🚬 VAPE PORTAL 9000</h1>
+        <p>Step into the future of flavor.</p>
+        <button class="button" id="startBtn">Начать</button>
     </div>
-    <div class="vape-list" id="vapeList"></div>
-  </div>
 
-  <!-- Detail Screen -->
-  <div class="detail-screen" id="detailScreen">
-    <h2 id="detailName"></h2>
-    <img id="detailImg" src="" />
-    <p id="detailSpecs"></p>
-    <div class="flavour-options" id="flavourOptions"></div>
-    <div class="button-group">
-      <button onclick="addToCart()"><span>➕ В корзину</span></button>
-      <button onclick="goBack()"><span>🔙 Назад</span></button>
+    <!-- Screen 1: Nicotine Strength -->
+    <div class="content" id="screen1" style="display:none;">
+        <h1>Выберите крепость никотина</h1>
+        <div class="vape-list">
+            <div class="vape-item">5% <button class="button" onclick="selectNicotine('5%')">Выбрать</button></div>
+            <div class="vape-item">2% <button class="button" onclick="selectNicotine('2%')">Выбрать</button></div>
+            <div class="vape-item">0% <button class="button" onclick="selectNicotine('0%')">Выбрать</button></div>
+        </div>
+        <div class="footer">
+            <button class="cart-button" onclick="goToChannel()">Перейти в канал</button>
+            <button class="back-button" onclick="goBack()">Назад</button>
+        </div>
     </div>
-  </div>
 
-  <!-- Cart Screen -->
-  <div class="cart-screen" id="cartScreen">
-    <h2>🛒 Корзина</h2>
-    <div id="cartItems"></div>
-    <div class="button-group">
-      <button onclick="sendOrder()"><span>📩 Отправить Стасу</span></button>
-      <button onclick="goBackToApp()"><span>🔙 Назад</span></button>
+    <!-- Screen 2: Puff Amount -->
+    <div class="content" id="screen2" style="display:none;">
+        <h1>Сколько затяжек вам нужно?</h1>
+        <div class="vape-list">
+            <div class="vape-item">до 15k <button class="button" onclick="selectPuffs('до 15k')">Выбрать</button></div>
+            <div class="vape-item">15k-30k <button class="button" onclick="selectPuffs('15k-30k')">Выбрать</button></div>
+            <div class="vape-item">40k+ <button class="button" onclick="selectPuffs('40k+')">Выбрать</button></div>
+        </div>
+        <div class="footer">
+            <button class="cart-button" onclick="goToChannel()">Перейти в канал</button>
+            <button class="back-button" onclick="goBack()">Назад</button>
+        </div>
     </div>
-  </div>
 
-  <script>
-    let vapes = [];
-    let cart = [];
-    let selectedVape = null;
-    let selectedFlavour = null;
+    <!-- Screen 3: Vape Selection -->
+    <div class="content" id="screen3" style="display:none;">
+        <h1>Выберите ваш вейп</h1>
+        <div class="vape-list">
+            <!-- Example vape selection dynamically generated -->
+            <div class="vape-item" onclick="selectVape('TORNADO 9k')">TORNADO 9k</div>
+            <div class="vape-item" onclick="selectVape('VOZOL Gear 10k')">VOZOL Gear 10k</div>
+            <!-- Add more vapes here -->
+        </div>
+        <p>Флavours будут отправлены вам после оформления заказа.</p>
+        <div class="footer">
+            <button class="cart-button" onclick="addToCart()">Добавить в корзину</button>
+            <button class="back-button" onclick="goBack()">Назад</button>
+        </div>
+    </div>
 
-    async function startApp() {
-      document.getElementById("welcome").style.display = "none";
-      document.getElementById("app").style.display = "block";
-      const res = await fetch("vapes.json");
-      vapes = await res.json();
-      renderVapes(vapes);
-    }
+    <!-- Cart Screen -->
+    <div class="content" id="cartScreen" style="display:none;">
+        <h1>Ваша корзина</h1>
+        <ul id="cartList">
+            <!-- Cart items will appear here -->
+        </ul>
+        <p>Нажмите "Отправить", чтобы оформить заказ.</p>
+        <div class="footer">
+            <button class="cart-button" onclick="submitOrder()">Отправить заказ</button>
+            <button class="back-button" onclick="goBack()">Назад</button>
+        </div>
+    </div>
 
-    function renderVapes(list) {
-      const container = document.getElementById("vapeList");
-      container.innerHTML = "";
-      list.forEach(v => {
-        const vapeDiv = document.createElement("div");
-        vapeDiv.className = "vape";
-        vapeDiv.innerHTML = `
-          <img src="${v.image}" alt="${v.name}" />
-          <h3>${v.name}</h3>
-          <p>💨 ${v.puffs} затяжек</p>
-          <p>🧪 Никотин: ${v.nicotine}</p>
-          <p>💶 €${v.price}</p>
-        `;
-        vapeDiv.onclick = () => showDetail(v);
-        container.appendChild(vapeDiv);
-      });
-    }
+    <script>
+        // Store user choices
+        let selectedNicotine = '';
+        let selectedPuffs = '';
+        let selectedVape = '';
+        let cart = [];
 
-    function filterVapes() {
-      const nic = document.getElementById("nicotine").value;
-      const puffs = document.getElementById("puffs").value;
-      const price = document.getElementById("price").value;
+        // Show the welcome screen
+        document.getElementById('startBtn').addEventListener('click', function() {
+            document.getElementById('welcomeScreen').style.display = 'none';
+            document.getElementById('screen1').style.display = 'block';
+        });
 
-      const filtered = vapes.filter(v => {
-        let nicMatch = nic === "" || v.nicotine === nic;
-        let puffMatch = puffs === "" ||
-          (puffs === "under15" && v.puffs <= 15000) ||
-          (puffs === "15to30" && v.puffs > 15000 && v.puffs <= 30000) ||
-          (puffs === "30plus" && v.puffs > 30000);
-        let priceMatch = price === "" ||
-          (price === "10" && v.price <= 10) ||
-          (price === "30" && v.price > 10 && v.price <= 30) ||
-          (price === "30plus" && v.price > 30);
+        // Select nicotine strength
+        function selectNicotine(nicotine) {
+            selectedNicotine = nicotine;
+            document.getElementById('screen1').style.display = 'none';
+            document.getElementById('screen2').style.display = 'block';
+        }
 
-        return nicMatch && puffMatch && priceMatch;
-      });
+        // Select puff amount
+        function selectPuffs(puffs) {
+            selectedPuffs = puffs;
+            document.getElementById('screen2').style.display = 'none';
+            document.getElementById('screen3').style.display = 'block';
+        }
 
-      renderVapes(filtered);
-    }
+        // Select vape
+        function selectVape(vape) {
+            selectedVape = vape;
+            document.getElementById('screen3').style.display = 'none';
+            document.getElementById('cartScreen').style.display = 'block';
+            cart.push(vape);
+            updateCart();
+        }
 
-    function showDetail(vape) {
-      selectedVape = vape;
-      document.getElementById("app").style.display = "none";
-      document.getElementById("detailScreen").style.display = "block";
-      document.getElementById("detailName").innerText = vape.name;
-      document.getElementById("detailImg").src = vape.image;
-      document.getElementById("detailSpecs").innerText = `💨 ${vape.puffs} затяжек / 🧪 ${vape.nicotine} / 💶 €${vape.price}`;
-      const flavourDiv = document.getElementById("flavourOptions");
-      flavourDiv.innerHTML = "";
-      (vape.flavours || ["Клубника", "Манго", "Мята"]).forEach(f => {
-        const btn = document.createElement("button");
-        btn.innerText = f;
-        btn.onclick = () => {
-          selectedFlavour = f;
-          [...flavourDiv.children].forEach(c => c.style.background = "#333");
-          btn.style.background = "#444";
-        };
-        flavourDiv.appendChild(btn);
-      });
-    }
+        // Add to cart
+        function addToCart() {
+            cart.push(selectedVape);
+            updateCart();
+        }
 
-    function addToCart() {
-      if (!selectedFlavour) return alert("Выберите вкус!");
-      cart.push({ ...selectedVape, flavour: selectedFlavour });
-      showCart();
-    }
+        // Update cart
+        function updateCart() {
+            const cartList = document.getElementById('cartList');
+            cartList.innerHTML = '';
+            cart.forEach(item => {
+                const li = document.createElement('li');
+                li.textContent = item;
+                cartList.appendChild(li);
+            });
+        }
 
-    function showCart() {
-      document.getElementById("detailScreen").style.display = "none";
-      document.getElementById("cartScreen").style.display = "block";
-      const container = document.getElementById("cartItems");
-      container.innerHTML = "";
-      cart.forEach(item => {
-        container.innerHTML += `
-          <div class="cart-item">
-            <strong>${item.name}</strong><br/>
-            💨 ${item.puffs} / 🧪 ${item.nicotine} / 💶 €${item.price}<br/>
-            🍓 Вкус: ${item.flavour}
-          </div>
-        `;
-      });
-    }
+        // Submit order
+        function submitOrder() {
+            alert('Ваш заказ отправлен!');
+            // Reset the cart
+            cart = [];
+            updateCart();
+            document.getElementById('cartScreen').style.display = 'none';
+            document.getElementById('welcomeScreen').style.display = 'block';
+        }
 
-    function goBack() {
-      document.getElementById("detailScreen").style.display = "none";
-      document.getElementById("app").style.display = "block";
-    }
+        // Go back to previous screen
+        function goBack() {
+            if (document.getElementById('screen1').style.display !== 'none') {
+                document.getElementById('welcomeScreen').style.display = 'block';
+                document.getElementById('screen1').style.display = 'none';
+            } else if (document.getElementById('screen2').style.display !== 'none') {
+                document.getElementById('screen1').style.display = 'block';
+                document.getElementById('screen2').style.display = 'none';
+            } else if (document.getElementById('screen3').style.display !== 'none') {
+                document.getElementById('screen2').style.display = 'block';
+                document.getElementById('screen3').style.display = 'none';
+            }
+        }
 
-    function goBackToApp() {
-      document.getElementById("cartScreen").style.display = "none";
-      document.getElementById("app").style.display = "block";
-    }
-
-    function sendOrder() {
-      const message = cart.map(c => `🚬 ${c.name} | 💨 ${c.puffs} | 🧪 ${c.nicotine} | 🍓 ${c.flavour} | 💶 €${c.price}`).join('\n');
-      const url = `https://t.me/share/url?url=&text=${encodeURIComponent("🛒 Заказ:\n" + message)}`;
-      window.open(url, '_blank');
-    }
-  </script>
-
+        // Go to the channel
+        function goToChannel() {
+            window.open("https://t.me/stas_vape", "_blank");
+        }
+    </script>
 </body>
 </html>
